Changed SQL text

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <span class="badge">PHP</span>
                     <span class="badge">Laravel</span>
                     <span class="badge">ReactJS</span>
-                    <span class="badge">SQL</span>
+                    <span class="badge">PostgreSQL</span>
                 </div>
             </div>
             <div class="project-links">
