Added DevConnector proyect

--- a/index.html
+++ b/index.html
@@ -53,6 +53,28 @@
         </div>
         <!-- End of Single Project Statement -->
 
+        <!-- Single Project Statement -->
+        <div class="project">
+            <div class="project-image">
+                <img src="img/devconnector_screen.png" alt="Project Landing">
+            </div>
+            <div class="project-info">
+                <h3 class="project-info-title">DevConnector</h3>
+                <p class="project-info-description">Developers social network with MERN Stach</p>
+                <div class="project-info-badges">
+                    <span class="badge">MongoDB</span>
+                    <span class="badge">Express</span>
+                    <span class="badge">ReactJS</span>
+                    <span class="badge">NodeJS</span>
+                </div>
+            </div>
+            <div class="project-links">
+                <a href="https://dev-connector-mario.herokuapp.com" target="_blank"><i class="fas fa-globe tooltip"><span class="tooltip-text tooltip-top">Go to Live Demo</span></i></a>
+                <a href="https://github.com/MarioAlbertoBS/DevConnector/tree/deploy" target="_blank"><i class="fab fa-github tooltip"><span class="tooltip-text tooltip-top">Go to Github Repo</span></i></a>
+            </div>
+        </div>
+        <!-- End of Single Project Statement -->
+
     </section>
 
     <!-- My Programming Languajes -->
